-------------------------------------------
Changes in version 1.2 (???? 2006)

- MAJOR API CHANGE:
  Fixed matrix access methods mat(x,y). These were previously said to be (row,column) but actually were (column, row). This lead to some confusion and made their use quite tricky. Irrlicht code is updated for the new method, but applications will silently fail now (i.e. compile without errors, but not working as expected).

- Update to zlib-1.2.3

- Fixed vertex alpha handling in DirectX drivers.

- Added texture matrix support for hardware accelerated drivers. This allows for efficient texture coord manipulations for complete meshes at once.

- Image writers fixed and working (at least for little endian systems).

- VSync under Linux fixed and correctly working.

- Added Solaris/Sparc port (basically some compiler define statements). Irrlicht and the examples should compile out-of-the-box on Suns with the usual Makefiles and gnumake.

- A new compile flag (IRR_OPENGL_USE_EXTPOINTER) allows Irrlicht to either use OpenGL extension function pointers or direct OpenGL calls.

- New os::Byteswap::byteswap methods which can be used for byteswapping (endianess correction) in mesh loaders and image loaders.

- New video driver feature to check for multitexture feature.

- Non-power-of-two textures are left unscaled if the driver supports such textures.

- Direct3D drivers update the devicelost variable if reseeting failed with this return code.

- VideoModeList under Linux is correctly filled now. No glX calls are made if GLX extension is not found - only software drivers are available then. RandR extension can be enabled with a new compile flag in IrrCompileConfig.h, either instead of XF86VidMode or in addition.

- new draw2DImage method that speeds up drawing many quads from the same texture. Font drawing is improved by this under OpenGL.

- Big Endian support for MS3D loader.

- Apfelbaum software renderer:
	basic mipmap support (per triangle)