@@ -12,6 +12,7 @@
 #define sinf(X) sin(X)
 #define cosf(X) cos(X)
 #define ceilf(X) ceil(X)
+#define floorf(X) floor(X)
 #define powf(X,Y) pow(X,Y)
 #define fmodf(X,Y) fmod(X,Y)
 #endif
@@ -66,6 +67,14 @@ namespace core
 	inline T abs_(const T a)
 	{
 		return a < 0 ? -a : a;
+	}
+
+	//! returns linear interpolation of a and b with ratio t
+	//! \return: a if t==0, b if t==1, and the linear interpolation else
+	template<class T>
+	inline T lerp(const T a, const T b, const T t)
+	{
+		return (a*(1-t)) + (b*t);
 	}
 
 	//! returns if a float equals the other one, taking floating 
